// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`persisted state snapshot > feeds store shape 1`] = `
{
  "test_123_https://blorpblorp.xyz/feed/1": {
    "data": {
      "feedView": {
        "apId": "https://blorpblorp.xyz/feed/1",
        "banner": null,
        "communityCount": 3,
        "communityHandles": undefined,
        "createdAt": "2025-01-31T03:56:12.085000+00:00",
        "description": null,
        "handle": "feed-1@blorpblorp.xyz",
        "icon": null,
        "id": 1,
        "name": "Feed 1",
        "nsfw": false,
        "optimisticSubscribed": undefined,
        "subscribed": false,
        "subscriberCount": 10,
      },
    },
    "lastUsed": 1704067200000,
  },
}
`;

exports[`persisted state snapshot > feeds store shape 2`] = `
{
  "feeds": {
    "test_123_https://blorpblorp.xyz/feed/1": {
      "data": {
        "feedView": {
          "apId": "https://blorpblorp.xyz/feed/1",
          "banner": null,
          "communityCount": 3,
          "communityHandles": undefined,
          "createdAt": "2025-01-31T03:56:12.085000+00:00",
          "description": null,
          "handle": "feed-1@blorpblorp.xyz",
          "icon": null,
          "id": 1,
          "name": "Feed 1",
          "nsfw": false,
          "optimisticSubscribed": undefined,
          "subscribed": false,
          "subscriberCount": 10,
        },
      },
      "lastUsed": 1704067200000,
    },
  },
}
`;
